<resources>
    <string name="app_name">MA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--login fragment-->
    <string name="login_title">LOGIN</string>
    <string name="login_id_input_hint">ID</string>
    <string name="login_pw_input_hint">PW</string>
    <string name="login_button_login">로그인</string>
    <string name="login_button_create_account"> + 새 계정 만들기</string>
    <string name="login_button_search_pw"> # 비밀번호 찾기</string>
</resources>