<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="368dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    tools:context="com.rule64.ma.MainActivity">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:paddingTop="10dp"
            android:text="@string/app_name"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/login_title" />

        <EditText
            android:id="@+id/editTextNewID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/login_id_input_hint"
            android:inputType="text"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTextNewPW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/login_pw_input_hint"
            android:inputType="textPassword"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/login_button_login" />

        <Button
            android:id="@+id/buttonCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/login_button_create_account" />

        <Button
            android:id="@+id/buttonSearchPW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/login_button_search_pw" />


</LinearLayout>